--- a/views/index.pug
+++ b/views/index.pug
@@ -18,8 +18,8 @@ h1 BetterCrewlink Server
 	p There #{connectionCount === 1 ? 'is' : 'are'} currently #{connectionCount} connected user#{connectionCount === 1 ? '' : 's'} 
 	<hr>
 	p
-		a(href="https://github.com/OhMyGuus/BetterCrewLink/releases/latest", target="_blank")
-			| To download BetterCrewLink
+		a(href="https://github.com/CalamityJames/BetterCrewLink/releases/latest", target="_blank")
+			| To download CJBetterCrewLink
 			| <b>Click here</b>
 	<hr>
 	 
